--- a/.github/workflows/deploy_beta.yml
+++ b/.github/workflows/deploy_beta.yml
@@ -1,4 +1,4 @@
-name: Deploy to AWS (CDK)
+name: Deploy to AWS (CDK) 2
 
 on:
   push:
@@ -36,4 +36,4 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.BETA_AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.BETA_AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: "ap-southeast-2"
+          AWS_REGION: "us-west-2"
